2013-08-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Config.pm, bin/pandora_server: backport the token
	"policy_manager" from the 5 version for to disabled the policy
	queue.

2013-08-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/DataServer.pm,
	  lib/PandoraFMS/SNMPServer.pm,
	  lib/PandoraFMS/Server.pm,
	  lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm,
	  lib/PandoraFMS/PluginServer.pm,
	  lib/PandoraFMS/ProducerConsumerServer.pm,
	  lib/PandoraFMS/PredictionServer.pm: Merged from trunk. Added clean-up
	  code to avoid resource leaks when there is a crash and the server has
	  to auto-restart.

2013-07-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Merged from trunk. Fixed some
	  parentheses that prevented remote_snmp_string modules from working.

2013-07-10  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Merged from trunk. Ignore reports if the
	  metaconsole is enabled, since agents are never local.

2013-06-27  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Synchronized with the generic
	configuration file, conf/pandora_server.conf.new.

2013-06-26  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.redhat.spec,
	  pandora_server.spec: Merged from 4.0 branch. Fixed directory
	  permissions.

2013-06-26  Sancho Lerena <slerena@artica.es>

	* util/plugin/pandora_loadgen.pl,
        util/plugin/ssh_pandoraplugin.sh: Fixed small problems with
	plugins provided as sample.

2013-06-25  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf.new: better values for server

	* util/agent_names.txt: Added default file for being used
	with pandora_xmlstress.conf

2013-06-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Fixed a call to get_agent_from_addr
	  that prevented parents from being properly detected.

2013-06-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Config.pm,
	lib/PandoraFMS/Core.pm,