@@ -1,3 +1,11 @@
+2013-08-28 Kikuchi Koichiro <koichiro@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Added PID number to self monitoring XML
+	 filename to avoid a race condition occurs when server and agent
+	 are running on the same host.
+
+	* lib/PandoraFMS/DataServer.pm: Added <module_group> support.
+
 2013-08-22 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* lib/PandoraFMS/Config.pm, bin/pandora_server: backport the token
